# m2r2

./: .pre-commit-config.yaml  dprint.json  m2r2.py  pyproject.toml
m2r2/: __init__.py  m2r2.py  parser.py
m2r2/cli/: m2r2.py
m2r2/rst/: directives.py  parser.py  renderer.py
m2r2/sphinx/: m2r2.py
